karl package Changelog
======================

4.25 (2017-01-06)
=================

- First view (profile recent items) switched over to use the new
  jsonindex query system, both the portlet and the full page

4.24 (2017-01-05)
=================

- Include the jsonindex updater script

4.23.2 (2016-12-22)
===================

- Brown bag on the previous fix

4.23.1 (2016-12-22)
===================

- Disable Carlos's user agent sniffing due to a bug

4.23 (2016-12-22)
=================

- Fix formatting on IE11 suspicious formatting

- User-friendly user agent string

- Handle delete when profiles couldn't be found

4.22.1 (2016-11-30)
===================

- Brown-bag, didn't have setuptools-git in my environment

4.22 (2016-11-30)
=================

- Track duplicate logins (LP #1640545)

- Notify user when a new "device" is used (LP #1640540)

4.21 (2016-10-23)
=================

- Lock accounts after X unsuccessful tries (LP #1613276)

4.20 (2016-10-13)
=================

- SHA1 error on changing password (LP #1631511)

- Track request information (LP #1632771)

- Permissions on Office New Forums Not Working (LP #1450132)

4.19 (2016-10-05)
=================

- Expire passwords (LP #1613274)

- Increase password complexity (LP #1613265)

- Maintain a password history to avoid re-using an old password
  (LP #1613266)

4.18.1 (2016-09-13)
===================

- Brown-bag missing template

4.18 (2016-09-13)
=================

- Login session timeout and remember me box  (LP #1618470)

- Whitelist/blacklist for shutting down access (LP #1619428)

4.17.3 (2016-08-23)
===================

- Missing .html on the reset_confirm URL

4.17.2 (2016-08-23)
===================

- Get correct URL in the password reset email


4.17.1 (2016-08-19)
===================

- Put "Username" in the correct place

4.17 (2016-08-19)
=================

- Remove special case for KarlStaff passwords to be managed by GSA

4.16 (2016-05-21)
=================
